--- a/SilaApiTest/SilaApiTest.csproj
+++ b/SilaApiTest/SilaApiTest.csproj
@@ -133,9 +133,10 @@
     <Compile Include="ApiTests\CheckKYC.cs" />
     <Compile Include="ApiTests\LinkAccountTest.cs" />
     <Compile Include="ApiTests\GetAccountsTest.cs" />
+    <Compile Include="ApiTests\IssueSilaTest.cs" />
     <Compile Include="MockServer.cs" />
     <Compile Include="Utilities\ModelsUtilities.cs" />
-    <Compile Include="Utilities\PrivateKey.cs" />
+    <Compile Include="Utilities\DefaultConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiTests\CheckHandleTest.cs" />
     <Compile Include="ApiTests\RegisterTest.cs" />
