MOD: appHandler renamed to appHandle MOD: RedeemSila Enpoint inputs MOD: RedeemMsg constructor MOD: MockServer to handle RedeemSila Endpoint ADD: RedeemSila Tests

--- a/SilaApiTest/SilaApiTest.csproj
+++ b/SilaApiTest/SilaApiTest.csproj
@@ -135,6 +135,7 @@
     <Compile Include="ApiTests\GetAccountsTest.cs" />
     <Compile Include="ApiTests\IssueSilaTest.cs" />
     <Compile Include="ApiTests\TransferSilaTests.cs" />
+    <Compile Include="ApiTests\RedeemSilaTests.cs" />
     <Compile Include="MockServer.cs" />
     <Compile Include="Utilities\ModelsUtilities.cs" />
     <Compile Include="Utilities\DefaultConfig.cs" />
