--- a/SilaApiTest/SilaApiTest.csproj
+++ b/SilaApiTest/SilaApiTest.csproj
@@ -136,13 +136,15 @@
     <Compile Include="ApiTests\IssueSilaTest.cs" />
     <Compile Include="ApiTests\TransferSilaTests.cs" />
     <Compile Include="ApiTests\RedeemSilaTests.cs" />
+    <Compile Include="ApiTests\GetTransactionsTest.cs" />
+    <Compile Include="ApiTests\SilaBalanceTests.cs" />
     <Compile Include="MockServer.cs" />
-    <Compile Include="Utilities\ModelsUtilities.cs" />
     <Compile Include="Utilities\DefaultConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiTests\CheckHandleTest.cs" />
     <Compile Include="ApiTests\RegisterTest.cs" />
     <Compile Include="ApiTests\RequestKYCTest.cs" />
+    <Compile Include="Utilities\ModelsUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
