--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle" Version="1.8.5" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
-    <PackageReference Include="Nethereum.Web3" Version="3.4.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="RestSharp" Version="106.6.10" />
+    <PackageReference Include="BouncyCastle" VersionOption="1.8.5" Version="1.8.5" />
+    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.6.0" />
+    <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.4.0" />
+    <PackageReference Include="Newtonsoft.Json" VersionOption="12.0.2" Version="12.0.2" />
+    <PackageReference Include="RestSharp" VersionOption="106.6.10" Version="106.6.10" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
   </ItemGroup>
 
