--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>
-      net46;net461;net462;net47;net471;net472;net48
+      netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;net46;net461;net462;net47;net471;net472;net48
     </TargetFrameworks>
     <Authors>Karlo Lorenzana</Authors>
     <Company>DigitalGeko</Company>
@@ -25,10 +25,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle" VersionOption="1.8.5" Version="1.8.5" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.3" />
-    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.6.0" />
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.4.0" />
+    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.6.0" />
+    
     <PackageReference Include="Newtonsoft.Json" VersionOption="12.0.2" Version="12.0.2" />
     <PackageReference Include="RestSharp" VersionOption="106.6.10" Version="106.6.10" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
