--- a/SilaApiTest/packages.config
+++ b/SilaApiTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
+  <package id="BouncyCastle.NetCore" version="1.8.5" targetFramework="net472" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
@@ -26,6 +27,8 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="RestSharp" version="106.6.10" targetFramework="net472" />
   <package id="RichardSzalay.MockHttp" version="5.0.0" targetFramework="net472" />
+  <package id="Sila.SDK" version="0.1.0-rc" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
 </packages>
