--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>
+    <TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
       netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;net46;net461;net462;net47;net471;net472;net48
+    </TargetFrameworks>
+    <TargetFrameworks Condition="'$(CoreOnly)' == 'True'">
+      netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0
     </TargetFrameworks>
     <Authors>Karlo Lorenzana</Authors>
     <Company>DigitalGeko</Company>
