--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
+    <!--<TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
       netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;net46;net461;net462;net47;net471;net472;net48
-    </TargetFrameworks>
-    <TargetFrameworks Condition="'$(CoreOnly)' == 'True'">
+    </TargetFrameworks>-->
+    <TargetFrameworks>
       netcoreapp2.0;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0
     </TargetFrameworks>
     <Authors>Karlo Lorenzana</Authors>
@@ -31,10 +31,9 @@
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.4.0" />
     <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.6.0" />
-    
-    <PackageReference Include="Newtonsoft.Json" VersionOption="12.0.2" Version="12.0.2" />
-    <PackageReference Include="RestSharp" VersionOption="106.6.10" Version="106.6.10" />
+    <PackageReference Include="RestSharp" Version="106.6.10" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
+    <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
