--- a/SilaAPITestProject/SilaAPITestProject.csproj
+++ b/SilaAPITestProject/SilaAPITestProject.csproj
@@ -14,6 +14,10 @@
   <ItemGroup>
     <PackageReference Include="BouncyCastle" Version="1.8.5" />
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
+    <PackageReference Include="coverlet.msbuild" Version="2.7.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
