--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -10,7 +10,7 @@
     <Authors>Karlo Lorenzana</Authors>
     <Company>DigitalGeko</Company>
     <Product>SilaSDK</Product>
-    <Version>0.1.0-rc</Version>
+    <Version>0.2.7-rc</Version>
     <owners>Silamoney</owners>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -23,17 +23,18 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget></PlatformTarget>
-    <DocumentationFile>C:\Users\loren\Source\Repos\sila-sdk-csharp\SilaAPI\SilaAPI.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle" Version="1.8.5" />
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
-    <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.4.0" />
-    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.6.0" />
-    <PackageReference Include="RestSharp" Version="106.6.10" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
+    <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.7.1" />
+    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
   </ItemGroup>
 
