--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ jobs:
       netCore21:
         sdkVersion: '2.1.x'
         frameworkVersion: 'netcoreapp2.1'
+        executeSonar: true
       netcore31:
         sdkVersion: '3.1.x'
         frameworkVersion: 'netcoreapp3.1'
@@ -27,6 +28,15 @@ jobs:
       packageType: 'sdk'
       version: $(sdkVersion)
     displayName: 'use dotnet $(sdkVersion)'
+
+  - task: SonarCloudPrepare@1
+    inputs:
+      SonarCloud: 'SonarCloud'
+      organization: 'silamoney'
+      scannerMode: 'MSBuild'
+      projectKey: 'sila-sdk-csharp'
+    displayName: 'Prepare Sonar analysis'
+    condition: and(succeeded(), eq(variables['executeSonar'], true))
 
   - task: DotNetCoreCLI@2
     inputs:
@@ -42,6 +52,16 @@ jobs:
     env:
       SILA_PRIVATE_KEY: $(silaPrivateKey)
     displayName: 'dotnet test $(buildConfiguration) $(frameworkVersion)'
+
+  - task: SonarCloudAnalyze@1
+    displayName: 'Sonar analysis'
+    condition: and(succeededOrFailed(), eq(variables['executeSonar'], true))
+
+  - task: SonarCloudPublish@1
+    inputs:
+      pollingTimeoutSec: '300'
+    condition: and(succeeded(), eq(variables['executeSonar'], true))
+
 
 - job: Framework
   pool:
