Added code coverage file to Sonar analysis

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ jobs:
       organization: 'silamoney'
       scannerMode: 'MSBuild'
       projectKey: 'sila-sdk-csharp'
+      extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/coverage/coverage.$(frameworkVersion).opencover.xml'
     displayName: 'Prepare Sonar analysis'
     condition: and(succeeded(), eq(variables['executeSonar'], true))
 
