Adding nuget package generation for later publish

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,3 +102,20 @@ jobs:
     displayName: 'Test Assemblies'
     env:
       SILA_PRIVATE_KEY: $(silaPrivateKey)
+  
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: pack
+      arguments: '--configuration $(buildConfiguration)'
+    displayName: dotnet pack
+
+  - task: CopyFiles@2
+    inputs:
+      Contents: '**/*.nupkg'
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+  
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
