--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -29,8 +29,23 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
-  <ItemGroup>
-    
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' OR
+    '$(TargetFramework)' == 'net461' OR
+    '$(TargetFramework)' == 'net462' OR
+    '$(TargetFramework)' == 'net47' OR
+    '$(TargetFramework)' == 'net471' OR
+    '$(TargetFramework)' == 'net472' OR
+    '$(TargetFramework)' == 'net48' ">
+    <PackageReference Include="BouncyCastle" Version="1.8.5" />
+    <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.7.1" />
+    <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+    <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1' OR
+    '$(TargetFramework)' == 'netcoreapp3.1' ">
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     <PackageReference Include="Nethereum.Web3" VersionOption="3.4.0" Version="3.7.1" />
     <PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
