--- a/SilaAPITestProject/SilaAPITestProject.csproj
+++ b/SilaAPITestProject/SilaAPITestProject.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
-      netcoreapp3.1;net46;net461;net462;net47;net471;net472;net48
+      netcoreapp2.1;netcoreapp3.1;net46;net461;net462;net47;net471;net472;net48
     </TargetFrameworks>
     <TargetFrameworks Condition="'$(CoreOnly)' == 'True'">
-      netcoreapp3.1
+      netcoreapp2.1;netcoreapp3.1
     </TargetFrameworks>
 
     <IsPackable>false</IsPackable>
