--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
       netCore21:
         sdkVersion: '2.1.x'
         frameworkVersion: 'netcoreapp2.1'
-        executeSonar: true
+        #executeSonar: true
       netcore31:
         sdkVersion: '3.1.x'
         frameworkVersion: 'netcoreapp3.1'
@@ -29,15 +29,15 @@ jobs:
       version: $(sdkVersion)
     displayName: 'use dotnet $(sdkVersion)'
 
-  - task: SonarCloudPrepare@1
-    inputs:
-      SonarCloud: 'SonarCloud'
-      organization: 'silamoney'
-      scannerMode: 'MSBuild'
-      projectKey: 'sila-sdk-csharp'
-      extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/coverage/coverage.$(frameworkVersion).opencover.xml'
-    displayName: 'Prepare Sonar analysis'
-    condition: and(succeeded(), eq(variables['executeSonar'], true))
+  #- task: SonarCloudPrepare@1
+  #  inputs:
+  #    SonarCloud: 'SonarCloud'
+  #    organization: 'silamoney'
+  #    scannerMode: 'MSBuild'
+  #    projectKey: 'sila-sdk-csharp'
+  #    extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/coverage/coverage.$(frameworkVersion).opencover.xml'
+  #  displayName: 'Prepare Sonar analysis'
+  #  condition: and(succeeded(), eq(variables['executeSonar'], true))
 
   - task: DotNetCoreCLI@2
     inputs:
@@ -54,14 +54,14 @@ jobs:
       SILA_PRIVATE_KEY: $(silaPrivateKey)
     displayName: 'dotnet test $(buildConfiguration) $(frameworkVersion)'
 
-  - task: SonarCloudAnalyze@1
-    displayName: 'Sonar analysis'
-    condition: and(succeededOrFailed(), eq(variables['executeSonar'], true))
+  #- task: SonarCloudAnalyze@1
+  #  displayName: 'Sonar analysis'
+  #  condition: and(succeededOrFailed(), eq(variables['executeSonar'], true))
 
-  - task: SonarCloudPublish@1
-    inputs:
-      pollingTimeoutSec: '300'
-    condition: and(succeeded(), eq(variables['executeSonar'], true))
+  #- task: SonarCloudPublish@1
+  #  inputs:
+  #    pollingTimeoutSec: '300'
+  #  condition: and(succeeded(), eq(variables['executeSonar'], true))
 
 
 - job: Framework
