--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,14 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Sila-Money_sila-sdk-csharp" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
           dotnet build
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+  request:
+    name: Request reviews on opened PRs
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create PR review request
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_FOR_AUTO_REQUEST_REVIEW }}
+        run: |
+          gh pr edit ${{ github.event.pull_request.html_url }} \
+            --add-reviewer Sila-Money/sdks
