--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -20,6 +20,7 @@
 		<PackageIconUrl></PackageIconUrl>
 		<AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
 		<PackageId>Sila.SDK</PackageId>
+		<TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -32,6 +33,7 @@
 	<ItemGroup>
 		<PackageReference Include="Nethereum.Signer" Version="3.8.0" />
 		<PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="RestSharp" Version="106.12.0" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
 		<PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
