--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -31,7 +31,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Nethereum.Signer" Version="4.0.0" />
+		<PackageReference Include="BouncyCastle" Version="1.8.2" />
+		<PackageReference Include="Nethereum.Signer" Version="4.15.2" />
 		<PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="RestSharp" Version="106.12.0" />
