--- a/SilaAPITestProject/SilaAPITestProject.csproj
+++ b/SilaAPITestProject/SilaAPITestProject.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
-      netcoreapp2.1;netcoreapp3.1;net46;net461;net462;net47;net471;net472;net48
+      netcoreapp2.1;netcoreapp3.1;net462;net47;net471;net472;net48;net5.0;net6.0;net7.0
     </TargetFrameworks>
     <TargetFrameworks Condition="'$(CoreOnly)' == 'True'">
-      netcoreapp2.1;netcoreapp3.1
+      netcoreapp2.1;netcoreapp3.1;net5.0;net6.0;net7.0
     </TargetFrameworks>
 
     <IsPackable>false</IsPackable>
@@ -16,14 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="2.8.0">
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0">
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
