--- a/SilaAPI/SilaAPI.csproj
+++ b/SilaAPI/SilaAPI.csproj
@@ -10,7 +10,7 @@
 		<Authors>Karlo Lorenzana;Jose Luis Morales Ruiz</Authors>
 		<Company>DigitalGeko</Company>
 		<Product>SilaSDK</Product>
-		<Version>1.0.0</Version>
+		<Version>1.0.0-rc1</Version>
 		<owners>Silamoney</owners>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
