--- a/SilaAPITestProject/SilaAPITestProject.csproj
+++ b/SilaAPITestProject/SilaAPITestProject.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks Condition="'$(CoreOnly)' != 'True'">
-      net8.0
+      netcoreapp2.1;netcoreapp3.1;net462;net47;net471;net472;net48;net5.0;net6.0;net7.0;net8.0
     </TargetFrameworks>
     <TargetFrameworks Condition="'$(CoreOnly)' == 'True'">
-      net8.0
+      netcoreapp2.1;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0
     </TargetFrameworks>
 
     <IsPackable>false</IsPackable>
